--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,13 @@ img {
     height: auto;
 }
 
+button,
+input,
+textarea {
+    font-family: inherit;
+    line-height: inherit;
+}
+
 .container {
     max-width: 1158px;
     padding: 0 15px; 
@@ -482,5 +489,301 @@ img {
 .footer-icon-link:focus {
     background-color: #31d0aa;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form {
+    display: flex;
+
+}
+
+.subscribe {
+    width: 100%;
+}
+
+.footer-mail {
+    margin-right: 24px;
+    color: #fff;
+    background-color: inherit;
+    border: 1px solid #fff;
+    border-radius: 4px;
+}
+
+.send-mail {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+        color: #FFFFFF;
+        background-color: #4D5AE5;
+        border: none;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        text-align: center;
+        cursor: pointer;
+        border-radius: 4px;
+        padding: 16px 32px;
+        margin: 0 auto;
+        width: 165px;
+        height: 40px;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.lot {
+    fill: #fff;
+}
+
+
+
+
+
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.modal {
+    position: absolute; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 408px;
+    min-height: 584px;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    background: #fcfcfc;
+
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop:not(.is-open) .modal {
+    transform: translate(-50%, -100%);
+}
+
+.btn-close-form {
+    position: absolute;
+    border: 2px solid red;
+    border-radius: 4px;
+    width: 24px;
+    height: 24px;
+    top: 24px;
+    right: 24px;
+    background-color: inherit;
+
+}
+
+/* .modal-icon-close {
+    border-radius: 100%;
+    fill: #e7e9fc;
+    stroke-width: 1px;
+    stroke: rgba(0, 0, 0, 0.1);
+} */
+
+.btn-close-form:hover .modal-icon-close,
+.btn-close-form:focus .modal-icon-close,
+.btn-close-form:active .modal-icon-close {
+    border-radius: 100%;
+        fill: #404bbf;
+        
+         background-color: ;
+    border: none;
+}
+
+/* .modal-icon-x {
+    fill: #2e2f42;
+} */
+
+.btn-close-form:hover .modal-icon-x,
+.btn-close-form:focus .modal-icon-x,
+.btn-close-form:active .modal-icon-x {
+     fill: #fff;
+}
+
+.modal-title {
+    margin: 76px 24px 16px;
+/* font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #2e2f42;     */
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    padding: 0 24px;
+    width: 100%;
+    height: 100%;
+    gap: 8px;
+    border-radius: 4px;
+    width: 360px;
+    /* height: 336px; */
+}
+
+.form-item {
+    width: 360px;
+    height: 58px;
+}
+
+.form-label {
+    width: 100%;
+}
+
+.form-little-item {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 4px;
+    padding: 3px 0;
+    position: relative;
+
+}
+
+.form-input {
+    width: 100%;
+    padding-left: 38px;
+}
+
+.form-icon {
+    position: absolute;
+   
+ 
+}
+
+.form-input:focus +.form-icon,
+.form-input:active +.form-icon {
+    fill: #404bbf;
+}
+
+.form-input:focus,
+.form-input:active {
+    border: 1px solid #404bbf;
+}
+
+.form-area {
+    display: flex;
+    width: 360px;
+    height: 138px;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.form-textarea {
+    width: 100%;
+    max-width: 120px;
+    padding: 8px 16px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+}
+
+
+.form-textarea::placeholder {
+    color: rgba(46, 47, 66, 0.4);
+}
+
+
+
+
+
+
+
+
+
+.form-accept {
+   
+}
+
+.form-check {
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+}
+
+.visually-hidden.form-check {
+    
+ }
+
+ .form-check:checked+.label-accept>span {
+    fill: #404bbf;
+    border: 1px solid #404bbf;
+}
+
+.label-accept {
+    margin-right: 8px;
+}
+
+ .check {
+    fill: transparent;
+ }
+
+
+
+ .form-check:active .check {
+     fill: #f4f4fd;
+ }
+
+.checkbox-text {
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+}
+
+.form-link {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.33333;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+}
+
+.submit {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 10px;
+    border: none;
+    border-radius: 4px;
+    padding: 16px 32px;
+    width: 169px;
+    height: 56px;
+    align-self: center;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin: 20px auto;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+}
+
+.submit:hover,
+.submit:focus {
+    background-color: #404BBF;
 }
 
