--- a/css/styles.css
+++ b/css/styles.css
@@ -491,27 +491,51 @@ textarea {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-form {
+.footer-small-form {
     display: flex;
+    flex-direction: column;
+    margin-left: 80px;
 
 }
 
-.subscribe {
-    width: 100%;
+.footer-form-text {
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+
+.footer-form {
+    display: flex;
+    gap: 24px;
 }
 
 .footer-mail {
+    width: 264px;
+    height: 40px;
     margin-right: 24px;
-    color: #fff;
-    background-color: inherit;
-    border: 1px solid #fff;
+    color: #ffffff;
+    background-color: transparent;
+    border: 1px solid #ffffff;
     border-radius: 4px;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    padding-left: 16px;
+}
+
+.footer-mail::placeholder {
+    color: #ffffff;
 }
 
 .send-mail {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: "Roboto", sans-serif;
         color: #FFFFFF;
         background-color: #4D5AE5;
         border: none;
@@ -524,12 +548,13 @@ textarea {
         border-radius: 4px;
         padding: 16px 32px;
         margin: 0 auto;
-        width: 165px;
+        min-width: 165px;
         height: 40px;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .lot {
+    margin-left: 16px;
     fill: #fff;
 }
 
