--- a/css/styles.css
+++ b/css/styles.css
@@ -848,7 +848,7 @@ textarea {
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: #4d5ae5;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    /* margin: 20px auto; */
+    margin: 20px auto;
     cursor: pointer;
 }
 
