--- a/css/styles.css
+++ b/css/styles.css
@@ -612,6 +612,7 @@ textarea {
     padding: 0;
     cursor: pointer;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 }
@@ -698,6 +699,7 @@ textarea {
     background-color: transparent;
     outline: transparent;
     border: 1px solid rgba(46, 47, 66, 0.4);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
