--- a/css/styles.css
+++ b/css/styles.css
@@ -752,6 +752,10 @@ textarea {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.form-textarea {
+    height: 120px;
+}
+
 .form-textarea:hover,
 .form-textarea:focus {
     border-color: #4D5AE5;
