--- a/css/styles.css
+++ b/css/styles.css
@@ -735,7 +735,7 @@ textarea {
     margin-bottom: 16px;
 }
 
-.form-textarea {
+.form-comment {
     width: 100%;
     height: 120px;
     padding: 8px 16px;
@@ -752,9 +752,7 @@ textarea {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-textarea {
-    height: 120px;
-}
+
 
 .form-textarea:hover,
 .form-textarea:focus {
