--- a/css/styles.css
+++ b/css/styles.css
@@ -511,7 +511,6 @@ textarea {
 .footer-mail {
     width: 264px;
     height: 40px;
-    margin-right: 24px;
     color: #ffffff;
     background-color: transparent;
     border: 1px solid #ffffff;
@@ -651,13 +650,8 @@ textarea {
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
     padding: 0 ;
-    width: 100%;
-    height: 100%;
     gap: 8px;
-    border-radius: 4px;
     width: 360px;
 }
 
@@ -775,14 +769,15 @@ textarea {
     border: 1px solid rgba(46, 47, 66, 0.4);
 }
 
-.visually-hidden.form-check {
+.form-check.visually-hidden   {
     
  }
 
- .form-check:checked+.label-accept>span {
-    fill: #F4F4FD;
+ .form-check:checked+.label-accept>span {    
+   
     border: none;
     background-color: #404bbf;
+    fill: #f4f4fd;
 }
 
 .label-accept {
@@ -804,14 +799,9 @@ textarea {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    fill: transparent;
+    fill: #ffffff;
 
 }
-
- .check {
-    fill: transparent;
- }
-
 
  .check-accept:focus .check,
  .check-accept:active .check {
