--- a/css/styles.css
+++ b/css/styles.css
@@ -799,8 +799,7 @@ textarea {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    fill: #ffffff;
-
+    fill: transparent;
 }
 
  .check-accept:focus .check,
